Update sample config to remove unnecessary or outdated sections and add ref to iWear720 display descriptor.

--- a/osvr_server_config.vuzix.sample.json
+++ b/osvr_server_config.vuzix.sample.json
@@ -1,16 +1,3 @@
 {
-  "plugins": [
-    "com_osvr_Vuzix"
-  ],
-  "routes": [
-    {
-      "destination": "/me/head",
-      "source": {
-        "child": {
-          "tracker": "/com_osvr_Vuzix/Vuzix",
-          "sensor": 0
-        }
-      }
-    }
-  ]
+  "display": "displays/HMD_Vuzix720.json"
 }
